--- a/Index.html
+++ b/Index.html
@@ -66,6 +66,6 @@
   <!-- Footer -->
   <footer>
     <p>© 2025 sonu kumar | All Rights Reserved</p>
-    <a href="qualifications.html">Qualifications</a>
+    <a href="qualifications.html">Qualiftions</a>
   </footer>
 </body>
